I Design a Product Page for a Perfume Brand

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="details">
 
       <div class="left">
-        
+        <img class="ir" src="images/image-product-desktop.jpg" alt="">
+        <img class="im" src="images/image-product-mobile.jpg" alt="">
       </div>
            
       <div class="right">
